--- a/m4-Network/m4-Network-Task-02/Vagrantfile
+++ b/m4-Network/m4-Network-Task-02/Vagrantfile
@@ -1,144 +1,166 @@
 Vagrant.configure("2") do |config|
-    # Set VM boot timeout to 300 seconds
-    config.vm.boot_timeout = 300
-  
-    ### Build net-3
-  
-    # Define VM for NAT
-    config.vm.define "nat" do |nat|
-      nat.vm.box = "bento/oracle-9.0"
-      nat.vm.hostname = "nat"
-      # Configure private network for net3
-      nat.vm.network "private_network", mac: "080027123456", virtualbox__intnet: "net3"
-      # Configure public network for home network with static IP
-      nat.vm.network "public_network", bridge: "wlp58s0", dhcp: false, ip: "192.168.80.80", netmask: "255.255.255.0", broadcast: "192.168.80.255"
-      nat.vm.provider "virtualbox" do |v|
-        v.memory = 512
-        v.cpus = 2
-      end
-    end
-  
-    # Define VM for DHCP server
-    config.vm.define "dhcp" do |dhcp|
-      dhcp.vm.box = "bento/ubuntu-22.04"
-      dhcp.vm.hostname = "dhcp"
-      # Configure private network for net3
-      dhcp.vm.network "private_network", mac: "080027123458", virtualbox__intnet: "net3"
-      dhcp.vm.provider "virtualbox" do |v|
-        v.memory = 768
-        v.cpus = 1
-      end
-    end
-  
-    # Define VM for DNS server
-    config.vm.define "dns" do |dns|
-      dns.vm.box = "bento/oracle-9.0"
-      dns.vm.hostname = "dns"
-      # Configure private network for net3
-      dns.vm.network "private_network", mac: "080027123457", virtualbox__intnet: "net3"
-      dns.vm.provider "virtualbox" do |v|
-        v.memory = 512
-        v.cpus = 1
-      end
-    end
-  
-    # Define VM for client in net3
-    config.vm.define "client-net3" do |client|
-      client.vm.box = "bento/centos-stream-9"
-      client.vm.hostname = "client-net3"
-      # Configure private network with DHCP for net3
-      client.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net3"
-      client.vm.provider "virtualbox" do |v|
-        v.memory = 512
-        v.cpus = 1
-      end
-    end
-  
-    # Define VM for router R13
-    config.vm.define "R1" do |r1|
-      r13.vm.box = "bento/ubuntu-22.04"
-      r13.vm.hostname = "R13"
-      # Configure private networks with DHCP for net3 and net1
-      r13.vm.network "private_network", type: "dhcp", mac: "080027123462", virtualbox__intnet: "net3"
-      r13.vm.network "private_network", type: "dhcp", mac: "080027123463", virtualbox__intnet: "net1"
-      r13.vm.provider "virtualbox" do |v|
-        v.memory = 768
-        v.cpus = 1
-      end
-    end
-  
-    # Define VM for client in net1
-    config.vm.define "client-net1" do |clientnet1|
-      clientnet1.vm.box = "bento/oracle-9.0"
-      clientnet1.vm.hostname = "client-net1"
-      # Configure private network with DHCP for net1
-      clientnet1.vm.network "private_network", type: "dhcp", mac: "080027123466", virtualbox__intnet: "net1"
-      clientnet1.vm.provider "virtualbox" do |v|
-        v.memory = 512
-        v.cpus = 1
-      end
-    end
-  
-    # Define VM for router R23
-    config.vm.define "R2" do |r2|
-      r23.vm.box = "bento/centos-stream-9"
-      r23.vm.hostname = "R23"
-      # Configure private networks with DHCP for net3 and net2
-      r23.vm.network "private_network", type: "dhcp", mac: "080027123460", virtualbox__intnet: "net3"
-      r23.vm.network "private_network", type: "dhcp", mac: "080027123461", virtualbox__intnet: "net2"
-      r23.vm.provider "virtualbox" do |v|
-        v.memory = 512
-        v.cpus = 1
-      end
-    end
-  
-    # Define VM for client in net2
-    config.vm.define "client-net2" do |clientnet2|
-      clientnet2.vm.box = "bento/ubuntu-22.04"
-      clientnet2.vm.hostname = "client-net2"
-      # Configure private network with DHCP for net2
-      clientnet2.vm.network "private_network", type: "dhcp", mac: "080027123467", virtualbox__intnet: "net2"
-      clientnet2.vm.provider "virtualbox" do |v|
-        v.memory = 768
-        v.cpus = 1
-      end
-    end
-  
-    # Define VM for router Rdmz
-    config.vm.define "Rdmz" do |rdmz|
-      rdmz3.vm.box = "bento/ubuntu-22.04"
-      rdmz3.vm.hostname = "Rdmz3"
-      # Configure private networks with DHCP for net3 and net-dmz
-      rdmz3.vm.network "private_network", type: "dhcp", mac: "080027123464", virtualbox__intnet: "net3"
-      rdmz3.vm.network "private_network", type: "dhcp", mac: "080027123465", virtualbox__intnet: "net-dmz"
-      rdmz3.vm.provider "virtualbox" do |v|
-        v.memory = 768
-        v.cpus = 1
-      end
-    end
-  
-    # Define VM for nginx server 1 in net-dmz
-    config.vm.define "nginx-1" do |nginx1|
-      nginx1.vm.box = "bento/centos-stream-9"
-      nginx1.vm.hostname = "nginx-1"
-      # Configure private network with DHCP for net-dmz
-      nginx1.vm.network "private_network", type: "dhcp", mac: "080027123468", virtualbox__intnet: "net-dmz"
-      nginx1.vm.provider "virtualbox" do |v|
-        v.memory = 512
-        v.cpus = 1
-      end
-    end
-  
-    # Define VM for nginx server 2 in net-dmz
-    config.vm.define "nginx-2" do |nginx2|
-      nginx2.vm.box = "bento/ubuntu-22.04"
-      nginx2.vm.hostname = "nginx-2"
-      # Configure private network with DHCP for net-dmz
-      nginx2.vm.network "private_network", type: "dhcp", mac: "080027123470", virtualbox__intnet: "net-dmz"
-      nginx2.vm.provider "virtualbox" do |v|
-        v.memory = 768
-        v.cpus = 1
-      end
+  # Set VM boot timeout to 300 seconds
+  config.vm.boot_timeout = 300
+
+  ### Build net-3
+
+  # Define VM for NAT
+  config.vm.define "nat" do |nat|
+    nat.vm.box = "bento/oracle-9.0"
+    nat.vm.hostname = "nat"
+    # Configure private network for net3
+    nat.vm.network "private_network", virtualbox__intnet: "net3"
+    # Configure public network for home network with static IP
+    nat.vm.network "public_network", bridge: "wlp58s0", dhcp: false, ip: "192.168.80.80", netmask: "255.255.255.0"
+    nat.vm.provider "virtualbox" do |v|
+      v.memory = 512
+      v.cpus = 2
     end
   end
-  
+
+  # Define VM for DHCP server
+  config.vm.define "dhcp" do |dhcp|
+    dhcp.vm.box = "bento/ubuntu-22.04"
+    dhcp.vm.hostname = "dhcp"
+    dhcp.vm.network "private_network", virtualbox__intnet: "net3"
+    dhcp.vm.provision "shell", path: "scripts/dhcp/setup_dhcp.sh"
+    dhcp.vm.provider "virtualbox" do |v|
+      v.memory = 768
+      v.cpus = 1
+    end
+  end
+
+  # Define VM for DNS server
+  config.vm.define "dns" do |dns|
+    dns.vm.box = "bento/oracle-9.0"
+    dns.vm.hostname = "dns"
+    # Configure private network for net3
+    dns.vm.network "private_network", virtualbox__intnet: "net3"
+    dns.vm.provider "virtualbox" do |v|
+      v.memory = 512
+      v.cpus = 1
+    end
+  end
+
+  # Define VM for client in net3
+  config.vm.define "client-net3" do |client|
+    client.vm.box = "bento/centos-stream-9"
+    client.vm.hostname = "client-net3"
+    # Configure private network with DHCP for net3
+    client.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net3"
+    client.vm.provision "shell", inline: <<-SHELL
+      ip route del default
+      ip route add default via 192.168.3.1
+    SHELL
+    client.vm.provider "virtualbox" do |v|
+      v.memory = 512
+      v.cpus = 1
+    end
+  end
+
+  # Define VM for router R1
+  config.vm.define "R1" do |r1|
+    r1.vm.box = "bento/ubuntu-22.04"
+    r1.vm.hostname = "R13"
+    # Configure private networks with DHCP for net3 and net1
+    r1.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net3"
+    r1.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net1"
+    r1.vm.provision "shell", path: "scripts/routers_conf/setup_router_R13.sh"
+    r1.vm.provider "virtualbox" do |v|
+      v.memory = 768
+      v.cpus = 1
+    end
+  end
+
+  # Define VM for client in net1
+  config.vm.define "client-net1" do |clientnet1|
+    clientnet1.vm.box = "bento/oracle-9.0"
+    clientnet1.vm.hostname = "client-net1"
+    # Configure private network with DHCP for net1
+    clientnet1.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net1"
+    clientnet1.vm.provision "shell", inline: <<-SHELL
+      ip route del default
+      ip route add default via 192.168.1.1
+    SHELL
+    clientnet1.vm.provider "virtualbox" do |v|
+      v.memory = 512
+      v.cpus = 1
+    end
+  end
+
+  # Define VM for router R2
+  config.vm.define "R2" do |r2|
+    r2.vm.box = "bento/centos-stream-9"
+    r2.vm.hostname = "R23"
+    # Configure private networks with DHCP for net3 and net2
+    r2.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net3"
+    r2.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net2"
+    r2.vm.provision "shell", path: "scripts/routers_conf/setup_router_R23.sh"
+    r2.vm.provider "virtualbox" do |v|
+      v.memory = 512
+      v.cpus = 1
+    end
+  end
+
+  # Define VM for client in net2
+  config.vm.define "client-net2" do |clientnet2|
+    clientnet2.vm.box = "bento/ubuntu-22.04"
+    clientnet2.vm.hostname = "client-net2"
+    # Configure private network with DHCP for net2
+    clientnet2.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net2"
+    clientnet2.vm.provision "shell", inline: <<-SHELL
+      ip route del default
+      ip route add default via 192.168.2.1
+    SHELL
+    clientnet2.vm.provider "virtualbox" do |v|
+      v.memory = 768
+      v.cpus = 1
+    end
+  end
+
+  # Define VM for router Rdmz
+  config.vm.define "Rdmz" do |rdmz3|
+    rdmz3.vm.box = "bento/ubuntu-22.04"
+    rdmz3.vm.hostname = "Rdmz3"
+    # Configure private networks with DHCP for net3 and net-dmz
+    rdmz3.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net3"
+    rdmz3.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net-dmz"
+    rdmz3.vm.provision "shell", path: "scripts/routers_conf/setup_router_Rdmz3.sh"
+    rdmz3.vm.provider "virtualbox" do |v|
+      v.memory = 768
+      v.cpus = 1
+    end
+  end
+
+  # Define VM for nginx server 1 in net-dmz
+  config.vm.define "nginx-1" do |nginx1|
+    nginx1.vm.box = "bento/centos-stream-9"
+    nginx1.vm.hostname = "nginx-1"
+    # Configure private network with DHCP for net-dmz
+    nginx1.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net-dmz"
+    nginx1.vm.provision "shell", inline: <<-SHELL
+      ip route del default
+      ip route add default via 192.168.4.1
+    SHELL
+    nginx1.vm.provider "virtualbox" do |v|
+      v.memory = 512
+      v.cpus = 1
+    end
+  end
+
+  # Define VM for nginx server 2 in net-dmz
+  config.vm.define "nginx-2" do |nginx2|
+    nginx2.vm.box = "bento/ubuntu-22.04"
+    nginx2.vm.hostname = "nginx-2"
+    # Configure private network with DHCP for net-dmz
+    nginx2.vm.network "private_network", type: "dhcp", virtualbox__intnet: "net-dmz"
+    nginx2.vm.provision "shell", inline: <<-SHELL
+      ip route del default
+      ip route add default via 192.168.4.1
+    SHELL
+    nginx2.vm.provider "virtualbox" do |v|
+      v.memory = 768
+      v.cpus = 1
+    end
+  end
+end
